# ae

./: .clang-format  .doxyfile.in  .gitignore  CMakeLists.txt  mingw-cmake-build.cmd
cmake-include/: collect_source_files.cmake  compile_definitions.cmake  environment_paths.cmake  generate_doxygen.cmake  generate_numeric_limits.cmake  parse_version.cmake  readme.md  toggle_options.cmake
cmake/module/: build_default_library.cmake  build_default_library.md  build_library.cmake  build_library.md  build_shared_library.cmake  build_shared_library.md  build_static_library.cmake  build_static_library.md  check_type_size.cmake  collect_cmake_options.md  collect_compile_options.cmake  collect_library_options.cmake  collect_options.cmake  collect_options.md  collect_options_to_compiler_definitions.cmake  collect_options_to_compiler_definitions.md  collect_source_files.cmake  collect_source_files.md  compile_definitions.cmake  compile_definitions.md  compile_options.cmake  environment_paths.cmake  environment_paths.md  generate_doxygen.cmake  generate_doxygen.md  generate_numeric_limits.cmake  generate_numeric_limits.md  include_compile_options.cmake  parse_version.cmake  parse_version.md  sync_static_build_option.cmake  toggle_compile_options.cmake  toggle_options.cmake  toggle_options.md
cmake/options/: compiler_common_options.cmake  compiler_debug_options.cmake  compiler_release_options.cmake  library_options.cmake
inc/ae/: addr.h  addr_traits.h  aligned_block.h  aligned_block_downcast.h  aligned_block_fields.h  aligned_block_initializer.h  aligned_range.h  aligned_range_initializer.h  allocated_block.h  allocated_block_initializer.h  allocated_range.h  allocated_range_initializer.h  any.h  array_size.h  ascii_map.h  attribute.h  attribute_symbol.h  attribute_target.h  attribute_thread_local.h  bit_traits.h  bit_util.h  bool.h  byte.h  byte_order.h  char.h  char_traits.h  compiler.h  compiler_attribute.h  compiler_attribute_builtin.h  compiler_attribute_symbol.h  compiler_attribute_target.h  compiler_attribute_thread_local.h  compiler_attribute_unused.h  compiler_bit_depth.h  compiler_constructor.h  compiler_destructor.h  compiler_extern_c.h  compiler_std_version.h  compiler_type.h  compiler_version.h  (+102 more)
inc/ae/draft/: aligned_block_cast.h  allocated_block_cast.h  dynamic_block_cast.h  error.h  memory_block_cast.h  memory_range_cast.h  struct_method.h
src/: aligned_block.c  aligned_range.c  allocated_block.c  allocated_range.c  dynamic_block.c  error.c  logger.c  memory.c  memory_allocator.c  memory_block.c  memory_range.c  memory_raw.c  numeric_fixed_types.c  runtime_allocator.c  runtime_error.c  runtime_frame_state.c  runtime_logger.c  stack_frame_state.c  str_raw.c  unified_block.c  version.c  wstr_raw.c
src/draft/: error.c
